# agent-semantic-protocols

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Justfile  README.md  SKILL.contract.org  SKILL.md  SKILL.org  asp.toml  devenv.nix  exit-code  pyproject.toml
build-support/asp-rust-project-harness-policy/: Cargo.toml  build.rs
build-support/asp-rust-project-harness-policy/benches/: performance_verification.rs
build-support/asp-rust-project-harness-policy/src/: build_gate.rs  evidence.rs  lib.rs  member_policy.rs  package_evidence_graph.rs  scenario.rs  search_scenarios.rs  workspace_evidence_graph.rs
crates/agent-semantic-artifacts/: Cargo.toml  build.rs
crates/agent-semantic-artifacts/src/: edge.rs  identity.rs  lib.rs  repair_chain.rs
crates/agent-semantic-artifacts/tests/: unit_test.rs
crates/agent-semantic-client/: Cargo.toml  build.rs
crates/agent-semantic-client-core/: Cargo.toml  build.rs
crates/agent-semantic-client-core/src/: activation.rs  cache_artifact.rs  cache_manifest.rs  config.rs  lib.rs  project_context.rs  provider_scope.rs  receipt.rs  request.rs  state_core.rs  types.rs
crates/agent-semantic-client-db/: Cargo.toml  build.rs
crates/agent-semantic-client-db/benches/: artifact_pointer_cas.rs  schema_v1_lifecycle.rs  sqlite_cache_hot_path.rs  turso_cache_hot_path.rs  turso_cdc_profile.rs  turso_encryption_profile.rs  turso_mvcc_concurrent_write.rs  turso_source_index.rs  turso_storage_slo_matrix.rs  turso_sync_local.rs  turso_sync_server_e2e.rs
crates/agent-semantic-client-db/src/: agent_session_registry.rs  artifact_pointer_store.rs  db.rs  engine.rs  evidence_graph.rs  lib.rs  pragmas.rs  storage_contract.rs  storage_performance_receipt.rs  syntax_query.rs  turso_agent_storage.rs  turso_cdc_storage.rs  turso_encrypted_storage.rs  turso_mvcc_keyset.rs  turso_mvcc_maintenance.rs  turso_mvcc_store.rs  turso_mvcc_typed.rs  turso_sync_storage.rs  types.rs
crates/agent-semantic-client-db/tests/: unit_test.rs
crates/agent-semantic-client-local-cli/: Cargo.toml  build.rs
crates/agent-semantic-client-local-cli/benches/: backend_hot_path.rs
crates/agent-semantic-client-local-cli/src/: backend.rs  lib.rs  provider_workspace_scope.rs
crates/agent-semantic-client-local-cli/tests/: unit_test.rs
crates/agent-semantic-client/benches/: client_microbench.rs  provider_runtime_storage.rs
crates/agent-semantic-client/src/: activation_cache.rs  cache_replay.rs  cli.rs  cli_args.rs  compact_mode.rs  lib.rs  native_prime.rs  provider_method.rs  provider_runtime_storage.rs  search_history.rs  source_index.rs  syntax_query_preflight.rs  syntax_receipt.rs  tools_cli.rs
crates/agent-semantic-config/: Cargo.toml
crates/agent-semantic-config/src/: codex_agent_projection.rs  codex_plugin_config.rs  hook_client_config.rs  layout.rs  lib.rs
crates/agent-semantic-config/tests/: action_match_config.rs  default_read_effect_projection.rs  unit.rs  wrapper_match_contract.rs
crates/agent-semantic-hook/: Cargo.toml  build.rs
crates/agent-semantic-hook/src/: activation_store.rs  active_artifact_receipt.rs  cache_paths.rs  classifier.rs  classifier_recovery.rs  codex_config.rs  codex_global_config.rs  codex_plugin_trust.rs  codex_project_trust.rs  codex_trust.rs  dev_context.rs  event_replay.rs  event_state.rs  event_state_subagent_model_drift.rs  executable.rs  hook_config.rs  hook_config_agent_org.rs  hook_config_global.rs  hook_recovery_prompt.rs  lib.rs  profile_registry.rs  protocol.rs  protocol_activation.rs  provider_manifest.rs  provider_registry.rs  read_only_subagent.rs  runtime_profile.rs  source_access.rs  source_dump_range.rs  source_selector.rs  tool_action.rs  tool_action_paths.rs
crates/agent-semantic-hook/templates/: hook_trigger_prompt.md
crates/agent-semantic-hook/tests/: unit_test.rs
crates/agent-semantic-protocol/: Cargo.toml  build.rs  pinned-language-releases.toml
crates/agent-semantic-protocol/src/: cli.rs  lib.rs  main.rs  query_owner_core.rs  state_cli.rs
crates/agent-semantic-protocol/tests/: unit_test.rs
crates/agent-semantic-provider-transport/: Cargo.toml  build.rs
crates/agent-semantic-provider-transport/src/: byte_text.rs  lib.rs  process_contract.rs  transport.rs
crates/agent-semantic-runtime/: Cargo.toml  build.rs
crates/agent-semantic-runtime/src/: agent_session_identity.rs  agent_session_status.rs  agent_session_status_snapshot.rs  agent_session_validation_report.rs  async_bridge.rs  codex_app_server_sessions.rs  codex_rollout_sessions.rs  git.rs  graph_render.rs  language_owner_items.rs  layout.rs  lib.rs  provider_workspace_scope.rs  runtime_source.rs  state.rs  state_core.rs  timeout_policy.rs
crates/agent-semantic-runtime/tests/: integration_test.rs
crates/agent-semantic-search/: Cargo.toml  build.rs
crates/agent-semantic-search-projection/: Cargo.toml
crates/agent-semantic-search-projection/src/: error.rs  lib.rs  model.rs  packet.rs  renderer.rs  source.rs
crates/agent-semantic-search-projection/tests/: unit_test.rs
crates/agent-semantic-search/src/: document_candidates.rs  dynamic_candidates.rs  evidence_graph_rank.rs  file_locator.rs  graph_candidate_projection.rs  graph_candidate_sparsity.rs  graph_evidence_projection.rs  graph_node_projection.rs  graph_owner_item_route.rs  graph_owner_rank.rs  graph_query_owner_seed.rs  graph_seed_decision.rs  graph_topology_projection.rs  lexical_overlay.rs  lexical_search_frame.rs  lib.rs  native_finder.rs  owner_items_source_index_trace.rs  pipe_candidates.rs  pipe_source.rs  pipe_source_document_acquisition.rs  pipe_source_index_acquisition.rs  pipe_source_index_projection.rs  pipe_source_lexical_frame.rs  prompt_output_replay.rs  provider_candidate_annotations.rs  query_packet_replay.rs  query_wrapper_candidates.rs  query_wrapper_quality.rs  query_wrapper_scan.rs  query_wrapper_scan_source.rs  scope_topology_candidates.rs  search_candidate.rs  (+17 more)
crates/agent-semantic-tree-sitter/: Cargo.toml  build.rs
crates/semantic-agent-hook/: Cargo.toml  build.rs
crates/semantic-agent-protocol/: Cargo.toml  build.rs
(+2371 files in other folders)
