[workspace]
members = [
    "crates/agent-semantic-config",
    "crates/agent-semantic-runtime",
    "crates/agent-semantic-client",
    "crates/agent-semantic-client-core",
    "crates/agent-semantic-client-db",
    "crates/agent-semantic-client-local-cli",
    "crates/agent-semantic-hook",
    "crates/agent-semantic-provider-transport",
    "crates/agent-semantic-protocol",
    "crates/agent-semantic-tree-sitter",
]
exclude = ["languages/orgize", "languages/rust-lang-project-harness"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["io-std", "io-util", "macros", "net", "process", "rt", "time"] }

bstr = "1"
bytes = "1"
criterion = "0.8.2"
futures-util = "0.3"
fs2 = "0.4"
globset = "0.4"
memchr = "2"
rust-lang-project-harness = { path = "languages/rust-lang-project-harness", default-features = false }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.9"
tracing = "0.1"
tree-sitter = "0.26"
tree-sitter-bash = "0.25"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
panic = "abort"

[profile.dev]
debug = 1
split-debuginfo = "unpacked"
