[workspace]
members = [
    "build-support/asp-rust-project-harness-policy",
    "crates/agent-semantic-artifacts",
    "crates/agent-semantic-config",
    "crates/agent-semantic-runtime",
    "crates/agent-semantic-client",
    "crates/agent-semantic-client-core",
    "crates/agent-semantic-client-db",
    "crates/agent-semantic-client-local-cli",
    "crates/agent-semantic-hook",
    "crates/agent-semantic-loop",
    "crates/agent-semantic-provider-transport",
    "crates/agent-semantic-search",
    "crates/agent-semantic-protocol",
    "crates/agent-semantic-tree-sitter",
]
exclude = ["languages/orgize", "languages/rust-lang-project-harness"]
resolver = "2"

[workspace.dependencies]
agent-semantic-artifacts = { path = "crates/agent-semantic-artifacts" }
tokio = { version = "1", features = ["io-std", "io-util", "macros", "net", "process", "rt", "time"] }

blake3 = "1"
bstr = "1"
bytes = "1"
criterion = "0.8.2"
futures-util = "0.3"
fs2 = "0.4"
globset = "0.4"
ignore = { version = "0.4.26", features = ["simd-accel"] }
orgize = { path = "languages/orgize", features = ["md"] }
libc = "0.2"
memchr = "2"
rust-lang-project-harness = { path = "languages/rust-lang-project-harness", default-features = false }
asp-rust-project-harness-policy = { path = "build-support/asp-rust-project-harness-policy" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
sha2 = "0.10"
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.9"
tracing = "0.1"
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
turso = { version = "0.7.0-pre.18", default-features = false, features = ["fts"] }
which = "8"

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 4
panic = "abort"
strip = true

[profile.dev]
incremental = true
debug = 1
split-debuginfo = "unpacked"

[profile.dev.package."*"]
debug = false

[profile.dev.build-override]
opt-level = 1
debug = false

[profile.dev.package.tree-sitter]
opt-level = 2

[profile.dev.package.sha2]
opt-level = 2

[profile.dev.package.memchr]
opt-level = 2

[profile.dev.package.ignore]
opt-level = 2

[profile.dev.package.globset]
opt-level = 2

[profile.dev.package.aho-corasick]
opt-level = 2

[profile.dev-build]
inherits = "dev"
opt-level = 1
debug = false
strip = true
