[package]
name = "agent-semantic-client-core"
version = "0.1.0"
edition = "2024"
description = "Core request, route, cache, and receipt contracts for the agent semantic client."
license = "MIT"

[dependencies]
agent-semantic-hook = { path = "../agent-semantic-hook" }
agent-semantic-config = { path = "../agent-semantic-config" }
agent-semantic-runtime = { path = "../agent-semantic-runtime" }
agent-semantic-tree-sitter = { version = "0.1.0", path = "../agent-semantic-tree-sitter" }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
rust-lang-project-harness = { workspace = true }

[dev-dependencies]
rust-lang-project-harness = { workspace = true }
