[package]
name = "agent-semantic-client-core"
version = "0.1.0"
edition.workspace = true
description = "Core request, route, cache, and receipt contracts for the agent semantic client."
license = "MIT"

[dependencies]
sha2.workspace = true
agent-semantic-hook = { path = "../agent-semantic-hook" }
agent-semantic-config = { path = "../agent-semantic-config" }
agent-semantic-runtime = { path = "../agent-semantic-runtime" }
agent-semantic-tree-sitter = { version = "0.1.0", path = "../agent-semantic-tree-sitter" }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }


[dev-dependencies]
asp-rust-project-harness-policy.workspace = true

[build-dependencies]
asp-rust-project-harness-policy.workspace = true
