[package]
name = "agent-semantic-client-db"
version = "0.1.0"
edition = "2024"
description = "Turso-backed DB Engine for the agent semantic client cache."
license = "MIT"

[dependencies]
agent-semantic-content-identity.workspace = true
agent-semantic-artifacts.workspace = true
agent-semantic-client-core = { path = "../agent-semantic-client-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
fs2 = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
turso = { version = "0.7.0", default-features = false, features = ["fts"] }
turso_sdk_kit = "=0.7.0"
agent-semantic-loop = { version = "0.1.0", path = "../agent-semantic-loop" }
which = { workspace = true }

[[bench]]
name = "turso_cache_hot_path"
harness = false


[dev-dependencies]
criterion = { workspace = true }
asp-rust-project-harness-policy.workspace = true
tokio = { workspace = true }

[build-dependencies]
asp-rust-project-harness-policy.workspace = true
