[package]
name = "agent-semantic-client-local-cli"
version = "0.1.0"
edition = "2024"
description = "Local native-provider execution backend for the agent semantic client."
license = "MIT"

[dependencies]
agent-semantic-client-core = { path = "../agent-semantic-client-core" }
agent-semantic-provider-transport = { path = "../agent-semantic-provider-transport" }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
rust-lang-project-harness = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rust-lang-project-harness = { workspace = true }

[[bench]]
name = "backend_hot_path"
harness = false
