[package]
name = "agent-semantic-client"
version = "0.1.0"
edition = "2024"
description = "Thin agent semantic client over native semantic language providers."
license = "MIT"

[dependencies]
agent-semantic-content-identity.workspace = true
agent-semantic-artifacts = { path = "../agent-semantic-artifacts" }
bytes = { workspace = true }
ignore = { workspace = true }
which = { workspace = true }
sha2 = { workspace = true }
agent-semantic-client-core = { path = "../agent-semantic-client-core" }
agent-semantic-client-db = { path = "../agent-semantic-client-db" }
agent-semantic-client-local-cli = { path = "../agent-semantic-client-local-cli" }
agent-semantic-hook = { path = "../agent-semantic-hook" }
agent-semantic-provider-transport = { path = "../agent-semantic-provider-transport" }
agent-semantic-runtime = { path = "../agent-semantic-runtime" }
agent-semantic-search = { path = "../agent-semantic-search" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }


[dev-dependencies]
criterion = { workspace = true }
asp-rust-project-harness-policy.workspace = true

[[bench]]
name = "client_microbench"
harness = false

[build-dependencies]
asp-rust-project-harness-policy.workspace = true
