[package]
name = "agent-semantic-config"
version = "0.1.0"
edition.workspace = true
description = "Unified project identity, configuration, and state layout for ASP."
license = "MIT"

[dependencies]
figment = { workspace = true, features = ["toml"] }
serde = { workspace = true }
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[test]]
name = "unit"
path = "tests/unit/main.rs"

[[test]]
name = "integration"
path = "tests/integration/main.rs"
