[package]
name = "agent-semantic-hook"
version = "0.1.0"
edition.workspace = true
description = "Root semantic agent hook runtime for provider manifests and project activations."
license = "MIT"

[dependencies]
agent-semantic-content-identity = { path = "../agent-semantic-content-identity" }
agent-semantic-config = { path = "../agent-semantic-config" }
agent-semantic-loop = { path = "../agent-semantic-loop" }
agent-semantic-runtime = { path = "../agent-semantic-runtime" }
aho-corasick.workspace = true
fs2 = { workspace = true }
globset = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }


[dev-dependencies]
jsonschema = { workspace = true }
asp-rust-project-harness-policy.workspace = true

[build-dependencies]
asp-rust-project-harness-policy.workspace = true
[dependencies.agent-semantic-command-match]
path = "../agent-semantic-command-match"
