[package]
name = "agent-semantic-hook"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Root semantic agent hook runtime for provider manifests and project activations."

[dependencies]
agent-semantic-command-match = { path = "../agent-semantic-command-match" }
agent-semantic-config = { path = "../agent-semantic-config" }
agent-semantic-content-identity = { path = "../agent-semantic-content-identity" }
agent-semantic-loop = { path = "../agent-semantic-loop" }
agent-semantic-runtime = { path = "../agent-semantic-runtime" }
aho-corasick = "1.1.4"
fs2 = "0.4"
globset = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.9"

[dev-dependencies]
jsonschema = { version = "0.48.1", default-features = false }
