[package]
name = "agent-semantic-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-semantic-client = { path = "../agent-semantic-client" }
agent-semantic-config = { path = "../agent-semantic-config" }
agent-semantic-hook = { path = "../agent-semantic-hook" }
agent-semantic-provider-transport = { path = "../agent-semantic-provider-transport" }
agent-semantic-runtime = { path = "../agent-semantic-runtime" }
agent-semantic-tree-sitter = { path = "../agent-semantic-tree-sitter" }
orgize = { path = "../../languages/orgize", features = ["md"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { workspace = true }
syn = { version = "2", features = ["full"] }
tokio = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-julia = "0.23.1"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"

[[bin]]
name = "asp"
path = "src/main.rs"

[build-dependencies]
rust-lang-project-harness = { workspace = true }

[dev-dependencies]
rs-harness = { path = "../../languages/rust-lang-project-harness/rs-harness" }
rust-lang-project-harness = { workspace = true }
toml = "0.9"
