[package]
name = "agent-semantic-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-semantic-client-core = { path = "../agent-semantic-client-core" }
agent-semantic-client-db = { path = "../agent-semantic-client-db", default-features = false }
aho-corasick = "1.1.4"
agent-semantic-client = { path = "../agent-semantic-client" }
agent-semantic-config = { path = "../agent-semantic-config" }
agent-semantic-hook = { path = "../agent-semantic-hook" }
agent-semantic-provider-transport = { path = "../agent-semantic-provider-transport" }
agent-semantic-runtime = { path = "../agent-semantic-runtime" }
agent-semantic-search = { path = "../agent-semantic-search", default-features = false }
agent-semantic-tree-sitter = { path = "../agent-semantic-tree-sitter" }
orgize = { workspace = true }
proc-macro2 = { version = "1", features = ["span-locations"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { workspace = true }
toml = { workspace = true }
syn = { version = "2", features = ["full"] }
tokio = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-julia = "0.23.1"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"
ignore = { workspace = true }
libc = "0.2"
which = { workspace = true }

[[bin]]
name = "asp"
path = "src/main.rs"

[build-dependencies]
rust-lang-project-harness = { workspace = true }

[dev-dependencies]
rs-harness = { path = "../../languages/rust-lang-project-harness/rs-harness" }
rust-lang-project-harness = { workspace = true }
toml = "0.9"
insta = "1"

[features]
turso-overlay = [
    "agent-semantic-search/turso-overlay",
    "agent-semantic-client-db/turso-backend",
]
