[package]
name = "agent-semantic-protocol"
version = "0.1.0"
edition.workspace = true

[lib]
doctest = false

[dependencies]
agent-semantic-content-identity.workspace = true
agent-semantic-client-core = { path = "../agent-semantic-client-core" }
agent-semantic-client-db = { path = "../agent-semantic-client-db" }
aho-corasick.workspace = true
agent-semantic-client = { path = "../agent-semantic-client" }
agent-semantic-config = { path = "../agent-semantic-config" }
agent-semantic-hook = { path = "../agent-semantic-hook" }
agent-semantic-provider-transport = { path = "../agent-semantic-provider-transport" }
agent-semantic-runtime = { path = "../agent-semantic-runtime" }
agent-semantic-search = { path = "../agent-semantic-search" }
agent-semantic-tree-sitter = { path = "../agent-semantic-tree-sitter" }
orgize = { workspace = true }
proc-macro2 = { workspace = true, features = ["span-locations"] }
serde.workspace = true
serde_json.workspace = true
sha2 = { workspace = true }
toml = { workspace = true }
syn = { workspace = true, features = ["full"] }
tokio = { workspace = true }
tree-sitter = { workspace = true }
ignore = { workspace = true }
libc.workspace = true
which = { workspace = true }
globset.workspace = true

[[bin]]
name = "asp"
path = "src/main.rs"

[build-dependencies]
asp-rust-project-harness-policy = { workspace = true }

[dev-dependencies]
rs-harness = { path = "../../languages/rust-lang-project-harness/rs-harness" }
rust-lang-project-harness = { workspace = true }
toml.workspace = true
insta.workspace = true
asp-rust-project-harness-policy = { path = "../../build-support/asp-rust-project-harness-policy" }
