[package]
name = "agent-semantic-provider-transport"
version = "0.1.0"
edition.workspace = true
description = "Tokio process transport for external ASP language providers."
license = "MIT"

[dependencies]
bstr = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
libc = { workspace = true }
memchr = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
asp-rust-project-harness-policy = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rust-lang-project-harness = { workspace = true }

[[bench]]
name = "transport_hot_path"
harness = false
