[package]
name = "agent-semantic-provider-transport"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Tokio process transport for external ASP language providers."

[dependencies]
bstr = "1"
bytes = "1"
futures-util = "0.3"
libc = "0.2"
memchr = "2"
sha2 = "0.10"
tokio = { version = "1", features = [
    "io-std",
    "io-util",
    "macros",
    "net",
    "process",
    "rt",
    "time",
] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"

[dev-dependencies]
criterion = "0.8.2"
