[package]
name = "agent-semantic-runtime"
version = "0.1.0"
edition = "2024"
description = "Runtime state materialization for ASP project-local storage."
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
agent-semantic-config = { path = "../agent-semantic-config" }
agent-semantic-provider-transport = { path = "../agent-semantic-provider-transport" }
bytes = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
uuid = "1.23.4"

[build-dependencies]
rust-lang-project-harness = { workspace = true }

[dev-dependencies]
rust-lang-project-harness = { workspace = true }
