[package]
name = "agent-semantic-runtime"
version = "0.1.0"
edition.workspace = true
description = "Runtime state materialization for ASP project-local storage."
license = "MIT"

[dependencies]
serde.workspace = true
serde_json.workspace = true
agent-semantic-config = { path = "../agent-semantic-config" }
agent-semantic-provider-transport = { path = "../agent-semantic-provider-transport" }
bytes = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
uuid.workspace = true

[build-dependencies]
asp-rust-project-harness-policy = { workspace = true }

[dev-dependencies]
rust-lang-project-harness = { workspace = true }
