[package]
name = "agent-semantic-search"
version = "0.1.0"
edition = "2024"
description = "Search orchestration services for ASP agent-facing queries."
license = "MIT"

[dependencies]
agent-semantic-client-core = { path = "../agent-semantic-client-core" }
agent-semantic-client-db = { path = "../agent-semantic-client-db" }
agent-semantic-hook = { path = "../agent-semantic-hook" }
agent-semantic-provider-transport = { path = "../agent-semantic-provider-transport" }
agent-semantic-runtime = { path = "../agent-semantic-runtime" }
bytes = { workspace = true }
ignore = { workspace = true }
orgize = { workspace = true }
serde_json = { workspace = true }
turso = { workspace = true }
which = { workspace = true }

[build-dependencies]
rust-lang-project-harness = { workspace = true }

[dev-dependencies]
rust-lang-project-harness = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
