[package]
name = "semantic-agent-hook"
version = "0.1.0"
edition = "2024"
description = "Root semantic agent hook runtime for language harness profiles."
license = "MIT"

[dependencies]
globset = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }

[build-dependencies]
rust-lang-project-harness = { workspace = true }

[dev-dependencies]
rust-lang-project-harness = { workspace = true }
