[package]
name = "semantic-agent-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
semantic-agent-hook = { path = "../semantic-agent-hook" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
rust-lang-project-harness = { path = "../../languages/rust-lang-project-harness", default-features = false }
